# breadbotdiscord

./: .env.example  .gitignore  Dockerfile  pyproject.toml
src/: main.py  registry.py  settings.py
src/db/: models.py  service.py
src/discordclient/: plain_message.py  service.py
src/inference/: client.py  mapper.py  predict.py
src/routers/: __init__.py  admin.py
src/stats/: plots.py
